fix: resolve CI build failures and broken README links
- Add mkdir -p out before javac to fix 'directory not found: out' error

- Replace Stream.toList() with collect(Collectors.toList()) for Java 8 compatibility

- Upgrade GitHub Actions to v5 to fix Node.js 20 deprecation warnings

- Fix broken O'Reilly book links (404) with working Pearson and jcip.net URLs

- Update README compile instructions to match CI workflow