@@ -3,6 +3,7 @@ package io.rickarya.collections.stream;
 import java.util.Arrays;
 import java.util.List;
 import java.util.concurrent.atomic.AtomicInteger;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public class ParallelStream {
@@ -12,14 +13,14 @@ public class ParallelStream {
         // This can significantly improve performance for large data sets
         // workload is distributed across multiple threads
         long startTime = System.currentTimeMillis();
-        List<Integer> list = Stream.iterate(1, x -> x + 1).limit(20000).toList();
-        List<Long> factorialsList = list.stream().map(ParallelStream::factorial).toList();
+        List<Integer> list = Stream.iterate(1, x -> x + 1).limit(20000).collect(Collectors.toList());
+        List<Long> factorialsList = list.stream().map(ParallelStream::factorial).collect(Collectors.toList());
         long endTime = System.currentTimeMillis();
         System.out.println("Time taken with sequential stream: " + (endTime - startTime) + " ms");
 
         startTime = System.currentTimeMillis();
-        factorialsList = list.parallelStream().map(ParallelStream::factorial).toList();
-//        factorialsList = list.parallelStream().map(ParallelStream::factorial).sequential().toList();
+        factorialsList = list.parallelStream().map(ParallelStream::factorial).collect(Collectors.toList());
+//        factorialsList = list.parallelStream().map(ParallelStream::factorial).sequential().collect(Collectors.toList());
         endTime = System.currentTimeMillis();
         System.out.println("Time taken with parallel stream: " + (endTime - startTime) + " ms");
 
@@ -30,7 +31,7 @@ public class ParallelStream {
         // [1, 2, 3, 4, 5] --> [1, 3, 6, 10, 15]
         List<Integer> numbers = Arrays.asList(1, 2, 3, 4, 5);
         AtomicInteger sum =  new AtomicInteger(0);
-        List<Integer> cumulativeSum = numbers.stream().sequential().map(sum::addAndGet).toList();
+        List<Integer> cumulativeSum = numbers.stream().sequential().map(sum::addAndGet).collect(Collectors.toList());
         System.out.println("Expected cumulative sum: [1, 3, 6, 10, 15]");
         System.out.println("Actual result with parallel stream: " + cumulativeSum);
 
